# itmo-low-level-programming-lab1

./: .gitignore  CMakeLists.txt  README.md  sweep.yaml
.github/workflows/: build-and-test.yml  cmake-multi-platform.yml  cross-platform-integration-test.yml  format.yml  sync-gitlab.yml
database/: CMakeLists.txt  database.c  database.h  database_attribute.h  database_attribute_type.h  database_attribute_value.h  database_attribute_values.c  database_attribute_values.h  database_attributes.c  database_attributes.h  database_create_table_request.c  database_create_table_request.h  database_insert_row_request.c  database_insert_row_request.h  database_join.c  database_join.h  database_row.c  database_row.h  database_scalar.c  database_scalar.h  database_table.c  database_table.h  database_where.c  database_where.h
database_app/: CMakeLists.txt  main.c
database_benchmarks/: CMakeLists.txt  main.c
database_benchmarks/results/: insert_benchmark_results.txt  remove_benchmark_results.txt  remove_memory_benchmark_results.txt  select_benchmark_results.txt
database_library/: CMakeLists.txt  database_library.c  database_library.h
database_test_app/: CMakeLists.txt  main.c
logger/: CMakeLists.txt  logger.c  logger.h
paging/: CMakeLists.txt  paging.c  paging.h
scripts/: filename.cmake  remove_unused_code.py
utils/: CMakeLists.txt  math_utils.c  math_utils.h
